--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,4 +61,7 @@ dependencies {
     // to ask premissions
     implementation 'com.karumi:dexter:6.2.3'
 
+    implementation 'com.squareup.picasso:picasso:2.71828'
+
+
 }
